Fix subtitle stretching

--- a/client/src/pages/HowItWorks/HowItWorks.module.sass
+++ b/client/src/pages/HowItWorks/HowItWorks.module.sass
@@ -22,11 +22,11 @@
 
 .subTitle
   font-size: 16px
-  padding: 10px
-  width: 250px
+  padding: 10px 20px
+  display: inline-block
   text-align: center
   background-color: rgba(55, 125, 255, 0.1)
-  color:#377dff
+  color: #377dff
   border-radius: 40px
   
   @media (max-width: 960px)
@@ -47,7 +47,6 @@
   @media (max-width: 960px)
     max-width: 600px
 
-
 .imgContainer
   max-width: 45%
   text-align: center
@@ -60,3 +59,4 @@
   max-width: 600px
   width: 100%
   border-radius: 20px
+
